WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34727
Assertion crashes and freezes when plug-in property access results in an exception
https://bugs.webkit.org/show_bug.cgi?id=34727
Summary
Assertion crashes and freezes when plug-in property access results in an exce...
Alexey Proskuryakov
Reported
2010-02-08 14:57:01 PST
Our code isn't prepared to plug-in calling NPN_SetException during property access.
Attachments
proposed fix
(18.24 KB, patch)
2010-02-08 15:15 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-02-08 15:15:58 PST
Created
attachment 48367
[details]
proposed fix
Darin Adler
Comment 2
2010-02-08 15:18:59 PST
Comment on
attachment 48367
[details]
proposed fix
> static void setGlobalException(JSC::UString exception);
Maybe this argument name should be a const &, but that's not new to your code.
> + static void moveGlobalExceptionToExecState(ExecState* exec);
You should omit the argument name there. r=me
Alexey Proskuryakov
Comment 3
2010-02-08 15:28:05 PST
Committed <
http://trac.webkit.org/changeset/54516
>.
Alexey Proskuryakov
Comment 4
2010-02-09 12:14:41 PST
<
rdar://problem/7124241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug