        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=34727
        Assertion crashes and freezes when plug-in property access results in an exception

        Test: plugins/netscape-plugin-property-access-exception.html



Canonical link: https://commits.webkit.org/45829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54516 268f45cc-cd09-0410-ab3c-d52691b4dbfc